fix(i18n+a11y+backend): locale detection, missing keys, focus trap, logging, deprecated API
Frontend:
- fix i18n locale detection: non-PT browsers now default to 'en' (was always 'pt-BR')
- fix missing i18n keys: alerts.statusActive/Inactive, common.hour/minute
- fix overlays.copyUrlSuccess → overlays.copySuccess (was showing raw key)
- fix Dashboard formatUptime hardcoded 'h'/'min' → i18n keys
- fix Modal focus trap broken selector (self-contradicting :not clauses)
- fix BlazeChannel recommended scopes table missing aria-label
- remove unused Clock import from LiveEvents
- add i18n test for new keys (28/28)

Backend:
- fix URLEncoder deprecated charset-string overload → StandardCharsets.UTF_8
- fix OAuthProfileService: log exception stack trace (was only ex.toString())
- fix BlazeOAuthController: log RuntimeException in non-JSON callback path
- fix BlazeEventsPipeline: SLF4J debug log dropping exception (4 args, 3 placeholders)
- fix GiveawayService.drawWinners: log exception before recovery attempt